Misc. alignment fixes

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul {
 /* Footer Shape Divider */
 .custom-shape-divider-bottom-1736456491 {
     position: absolute;
-    bottom: 110px;
+    bottom: 95px;
     left: 0;
     width: 100%;
     overflow: hidden;
@@ -108,7 +108,7 @@ img {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 24px;
+    gap: 48px;
 }
 
 .footer {
@@ -137,7 +137,7 @@ img {
 
     /* Flexbox */
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
